fix the uncool way the layout jumps when event title is wrapped to a second line and the "Click to expand" appears

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -227,6 +227,10 @@ table.table.when_where_host_table td.image {
   display: none;
 }
 
+.very_faint {
+  opacity: 0.001;
+}
+
 .table td {
   margin-bottom:0px;
   padding:4px;
